ADD: Tasks 8-9 solutions. В 9 задаче добавлены комментарии.