@@ -5,7 +5,10 @@ import common.PersonService;
 import common.PersonWithResumes;
 import common.Resume;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /*
   Еще один вариант задачи обогащения
@@ -21,7 +24,18 @@ public class Task8 {
   }
 
   public Set<PersonWithResumes> enrichPersonsWithResumes(Collection<Person> persons) {
-    Set<Resume> resumes = personService.findResumes(Set.of());
-    return Set.of();
+    Set<Resume> resumes = personService.findResumes(persons.stream()
+          .map(Person::id)
+          .collect(Collectors.toSet())
+    );
+
+    // Группируем резюме по идентификатору персоны
+    Map<Integer, Set<Resume>> resumesByPersonId = resumes.stream()
+           .collect(Collectors.groupingBy(Resume::personId, Collectors.toSet()));
+
+    // Создаем объекты PersonWithResumes и добавляем их в множество
+    return persons.stream()
+           .map(person -> new PersonWithResumes(person, resumesByPersonId.getOrDefault(person.id(), Collections.emptySet())))
+           .collect(Collectors.toSet());
   }
 }
